# openai-req

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: conversions.rs  lib.rs  structs.rs
src/audio/: mod.rs  structs.rs
src/chat/: mod.rs  structs.rs
src/completion/: mod.rs  structs.rs
src/edit/: mod.rs  structs.rs
src/embeddings/: mod.rs  structs.rs
src/files/: mod.rs  structs.rs
src/fine_tunes/: mod.rs  structs.rs
src/image/: mod.rs  structs.rs
src/model/: mod.rs
src/moderations/: mod.rs  structs.rs
tests/: integration_test.rs
