[package]
name = "openai-req"
version = "1.0.0"
edition = "2021"
authors = ["Arsenii Rudenko <inbox@arudenko.work>"]
description = "Client for OpenAI api, written with reqwest and tokio"
keywords = ["OpenAI", "api", "client", "web"]
repository = "https://github.com/ArseniiRudenko/openai-req"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json","multipart","stream"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
tokio-stream = "0.1.12"
async-trait = "0.1.66"
futures-util = "0.3.27"
anyhow = "1.0.69"
bytes = "1.4.0"
strum = "0.24.1"
strum_macros = "0.24.3"
with-id = { version ="1", features=["derive"]}
serde_json = "1.0.94"

[dev-dependencies]
toml = "0.7.2"
pretty_assertions = "1"
file_diff = "1.0.0"
